# hush

./: .gitignore  Cargo.toml  LICENSE  readme.md  readme.org  release.org  rustfmt.toml  spec.org
book/: book.toml
book/src/: SUMMARY.md  error-handling.md  foreword.md  installation.md  overview.md  std.md  wrapping-up.md
book/src/appendix/: operators.md
book/src/cmd/: async.md  basic.md  builtins.md  capture.md  readme.md
book/src/intro/: basic-constructs.md  control-flow.md  hello-world.md  readme.md  type-system.md
book/src/paradigms/: fun.md  oop.md  readme.md
book/theme/: hush-highlight.js
docker/: dockerfile  makefile
examples/bash pitfalls/: array.sh  dict.sh  floating-point.sh  readme.md
examples/hush/: heap.hsh  iterator.hsh  spec-snippets.hsh
examples/hush vs lua/: shell capabilities.org
spec/: readme.org  syntax.ebnf
src/: args.rs  fmt.rs  io.rs  main.rs  slice.rs  source.rs
src/lexer/: command.rs  cursor.rs  error.rs  mod.rs  tests.rs  token.rs
src/lexer/automata/: argument.rs  command.rs  comment.rs  mod.rs  number.rs  old.rs  root.rs  string.rs  symbol.rs  word.rs
src/runtime/: command.rs  flow.rs  lib.rs  mem.rs  mod.rs  panic.rs  source.rs
src/runtime/command/: arg.rs  command.rs  exec.rs  fmt.rs  mod.rs
src/runtime/lib/: args.rs  assert.rs  base64.rs  bind.rs  bytes.rs  catch.rs  cd.rs  contains.rs  cwd.rs  (+34 more)
src/semantic/: mod.rs  scope.rs
src/symbol/: fmt.rs  mod.rs
src/syntax/: error.rs  fmt.rs  mod.rs  source.rs  tests.rs
src/term/: color.rs
src/tests/: util.rs
syntax-highlight/emacs/: hush-mode.el
syntax-highlight/pygments/: readme.org  setup.py
syntax-highlight/vis/: README.md  hush.lua  hush_detect.lua
syntax-highlight/vscode/: language-configuration.json  package.json  vsc-extension-quickstart.md
(+148 files in other folders)
