[package]
name = "hush"
version = "0.1.0"
authors = ["gahag <gabriel.s.b@live.com>"]
edition = "2018"

[dependencies]
automod = "1.0"

clap = "2.33"
termion = "1.5"

intaglio = "1.2"
gc = { version = "0.4", features = ["derive"] }
regex = { version = "1.5", default-features = false, features = [ "std" ] }
inventory = "0.1"
bstr = "0.2"

serial_test = "0.5"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
lto = true
