[package]
name = "hush"
description = "Hush is a unix shell scripting language based on the Lua programming language"
version = "0.1.4"
authors = ["gahag <gabriel.s.b@live.com>"]
edition = "2018"
homepage = "https://github.com/gahag/hush"
repository = "https://github.com/gahag/hush"
license = "MIT"

[dependencies]
automod = "1.0"

clap = "2.33"
termion = "1.5"

intaglio = "1.2"
gc = { version = "0.4", features = ["derive"] }
regex = { version = "1.5", default-features = false, features = [ "std", "unicode-perl" ] }
os_pipe = "1.0"
inventory = "0.1"
bstr = "0.2"
glob = "0.3"

serial_test = "0.5"

serde = "1.0"
serde_json = "1.0"
base64 = "0.13"
hex = "0.4"
rand = "0.8.5"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
lto = true
